refactor(task/GD-54): fix coverage info (#112)
* refactor(task/GD-54) project structure refactor and dependency normalization.

* fix(task/GD-54) docs-core-dto-test dependency name.

* fix(task/GD-54) DocxStamperInputTemplateProcessor UnresolvedExpressionException reference.

* fix(task/GD-54) DocxStamper customization.

* fix(task/GD-54) DocumentEngineDocxStamperConfiguration customization.

* fix(task/GD-54) sonar config.

* fix(task/GD-54) sonar config.

* fix(task/GD-54) jacoco config.

* ci(task/GD-54) codecov config.

* ci(task/GD-54) codecov config.

* ci(task/GD-54) codecov config.

* ci(task/GD-54) test reports added.

* ci(task/GD-54) test reports added.

* ci(task/GD-54) test reports path fix.

* ci(task/GD-54) mvn site compose fix.

* test(task/GD-54): increase coverage in docs-core

* test(task/GD-54): increase coverage in docs-core

---------

Co-authored-by: videki <videki@users.noreply.github.com>